# InfotecsInternship

./: .gitignore  README.md
project/: CMakeLists.txt
project/TestApp/: CMakeLists.txt  TestApp.cpp
project/TestSocketApp/: CMakeLists.txt  Client.cpp  Server.cpp
project/include/AppLogEvents/: AppLogEvents.h  EventId.h
project/include/Logger/: FileLogger.h  ILogger.h  LogLevel.h  SocketLogger.h
project/include/Utilities/: Calculator.h  Parser.h  PortableClock.h
project/src/: CMakeLists.txt  FileLogger.cpp  SocketLogger.cpp
project/tests/: AppTests.cpp  CMakeLists.txt
